# CDC.SoundLateralizationTask

./: .gitignore  .gitmodules  README.md  documentation.html  index.html  index.json  manifest.json  run.ps1  setup.json  setup.ps1  toc.html  toc.json  training.json  xrefmap.yml
.config/: dotnet-tools.json
api/: Animal.Animal.html  Animal.AutobiasCorrection.html  Animal.BiasedBlockDistribution.html  Animal.BiasedSession.html  Animal.DeserializeFromJson.html  Animal.DeserializeFromYaml.html  Animal.FixationTime.html  Animal.OptoLED.html  Animal.OptoLEDMode.html  Animal.Optogenetics.html  Animal.OptogeneticsMode.html  Animal.OptogeneticsRampMode.html  Animal.ReactionTime.html  Animal.Reward.html  Animal.SerializeToJson.html  Animal.SerializeToYaml.html  Animal.Session.html  Animal.Sound.html  Animal.TimeConstrains.html  Animal.html  CF.Antibias.html  CF.CalculateRatio.html  CF.GenerateILDArray.html  CF.GenerateLateralizedILDs.html  CF.GenerateLateralizedILDsFL.html  CF.GetOutputDir.html  CF.ShuffleArray.html  CF.html  Config.Config.html  Config.DeserializeFromJson.html  Config.DeserializeFromYaml.html  Config.Paths.html  Config.Ports.html  Config.SerializeToJson.html  Config.SerializeToYaml.html  Config.html  Extensions.CalculateRatio.html  Extensions.GenerateILDArray.html  Extensions.GetOutputDir.html  Extensions.ShuffleArray.html  (+80 more)
articles/: abort.html  autobias.html  biased-blocks.html  choice.html  fixation-time.html  inter-trial-interval.html  introduction.html  optogenetics.html  reward.html  start-trial.html  state-machine.html  stimulus.html  toc.html  toc.json
bonsai/: Bonsai.config  NuGet.config  Setup.ps1
config/: animal.yml  setup.csv  template.yml  training.csv  training.json
docfx-tools/: README.html
docs/: .aux  build.ps1  docfx.json  docs.tex  documentation.md  end.aux  index.md  toc.yml
installation/: bill_of_materials.html  calibrations.html  camera.html  configuration.html  harp.html  known_issues.html  running.html  software.html  (+3 more)
python/: ConversionTool.cmd  conversion_tool.ps1  pyproject.toml
python/assets/: plots.yml
python/input/: setup.csv
python/src/config/: __main__.py  config.py  gui.py  load_sounds.py  utils.py
python/src/parser/: config_to_json.py  generate_csv.py  output_to_csv.py  startup.py  startup_script.py
python/src/sgen/: __main__.py  _utils.py  animal.py  config.py  output.py  prints.py  setup.py  training.py
python/src/shutdown/: __main__.py  block_plots.py  output_to_csv.py  plot_schema.py  plotting.py  shutdown.py  shutdown_script.py  tool.py  utils.py  video_preprocessing.py
python/src/startup/: __init__.py  __main__.py  config_to_json.py  file_conversion.py  prompts.py  startup.py  utils.py
python/src/tooling/: merger.py
python_scripts/: pyproject.toml
python_scripts/input/: setup.csv  training.csv
python_scripts/src/config/: gui.py
python_scripts/src/parser/: config_to_json.py  output_to_csv.py
python_scripts/src/sgen/: __main__.py  config.py  output.py
(+282 files in other folders)
