[project]
name = "python-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sgen", "src/parser"]

[project.scripts]
generate-schemas = "sgen.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
